force-app/main/default/objects/redwing__RichText_Content__c/redwing__RichText_Content__c.object-meta.xml
<CustomObject>
    <label>Rich Text Content</label>
    <nameField>
        <displayFormat>RTC-{0000000}</displayFormat>
        <label>Content ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rich Text Content</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>