force-app/main/default/objects/redwing__RichText_Content__c/fields/redwing__Content__c.field-meta.xml
<CustomField>
    <fullName>redwing__Content__c</fullName>
    <label>Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>