force-app/main/default/objects/redwing__RichText_Content__c/fields/redwing__RichText__c.field-meta.xml
<CustomField>
    <fullName>redwing__RichText__c</fullName>
    <label>Rich Text</label>
    <referenceTo>redwing__RichText__c</referenceTo>
    <relationshipLabel>Rich Text Content</relationshipLabel>
    <relationshipName>RichText_Contents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>