force-app/main/default/objects/redwing__RichText_Content__c/fields/redwing__Title__c.field-meta.xml
<CustomField>
    <fullName>redwing__Title__c</fullName>
    <inlineHelpText>Title for this rich text content section</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>