force-app/main/default/objects/redwing__RichText_Content__c/fields/redwing__Video_Dimensions_Unit__c.field-meta.xml
<CustomField>
    <fullName>redwing__Video_Dimensions_Unit__c</fullName>
    <label>Video Dimensions Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>pixels</fullName>
                <default>true</default>
                <label>pixels</label>
            </value>
            <value>
                <fullName>percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>