force-app/main/default/objects/redwing__RichText_Content__c/fields/redwing__Video_URL__c.field-meta.xml
<CustomField>
    <fullName>redwing__Video_URL__c</fullName>
    <inlineHelpText>URL for an embedded video as part of this Rich Text Content</inlineHelpText>
    <label>Video URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>