force-app/main/default/objects/redwing__RichText_Content__c/fields/redwing__Video_Width__c.field-meta.xml
<CustomField>
    <fullName>redwing__Video_Width__c</fullName>
    <label>Video Width</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>